# CogniGraph-RAG

./: .gitignore  README.md  package-lock.json
backend/: .env  .env.example  README.md  config.py  pyproject.toml
backend/app/: main.py  schemas.py
backend/core/: config.py
backend/data/chroma_db/: chroma.sqlite3
backend/ingestion/: graph_builder.py  indexer.py  ocr_config.py  parser.py  pipeline.py
backend/retrieval/: conversational_logic.py  hybrid_retriever.py  qa_chain.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/upload/: route.ts
frontend/components/: ChatInterface.tsx  DocumentLibrary.tsx  FileUploader.tsx
frontend/lib/: api.ts
