[tool.poetry]
name = "next-rag-backend"
version = "0.1.0"
description = "Backend for Next RAG project"
authors = ["AI Assistant <assistant@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
unstructured = {extras = ["docx", "ocr", "pdf"], version = "^0.18.9"}
chromadb = "*"
neo4j = "*"
sentence-transformers = "*"
python-dotenv = "*"
pydantic = "*"
python-multipart = "^0.0.20"
loguru = "^0.7.3"
langchain = "^0.3.27"
langchain-core = "^0.3.72"
langchain-community = "^0.3.27"
langchain-google-genai = "^2.1.9"
langchain-huggingface = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
